--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "frictionless (>=5.18.1,<6.0.0)"
+    "frictionless (>=5.18.1,<6.0.0)",
+    "pandas (>=2.3.2,<3.0.0)"
 ]
 
 
